2019-01-30  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix filter min and max currency
	* Fix crash on CSV import of quoted value containing delimiter

2019-01-15  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Update revision of schedule on confirmed occurrence

2019-01-05  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Description of eqz file format

2018-11-14  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Make eqz-file parsing more flexible (do not require transaction type,
	  accept value property for expenses and incomes, allow to/from instead of
	  category propery, etc.)
	* Timestamp in seconds instead of microseconds

2018-11-01  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Better handling of unknown transaction or category type encountered in file

2018-11-01  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Budget day fixes

2018-10-31  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to specify first budget month of year (financial year)

2018-10-07  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix saving of recurring expense with multiple payments
	* Remove recurrence tab from expense paid with loan dialog
	* "Payed" => "Paid"

2018-09-11  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved Enter/Return key actions and input focus

2018-09-06  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to sort transactions by timestamp (in header context menu)

2018-09-05  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Select whole number on double click in value field
	* Scroll to added/modified transaction

2018-08-04  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add comments field to split transaction dialog

2018-07-22  Nils VAN ZUIJLEN <nils.van-zuijlen@mailo.com>

	* Added translations for French

2018-06-20  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix value field conversion with dollar sign

2018-06-12  Hanna Knutsson <hanna.knutsson@protonmail.com>
