@@ -1,3 +1,7 @@
+2019-02-02  Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Schedule confirmation time setting
+
 2019-01-30  Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Fix filter min and max currency
